fix homepage spacing

--- a/src/style.scss
+++ b/src/style.scss
@@ -331,12 +331,11 @@ a {
 	.homepage-title {
 		width: 12em;
 		height: 1em;
-		margin-top: 1em;
 	}
 
 	.homepage-description{
 		width: 45em;
-		margin-top: 15em;
+		margin-top: 18em;
 		margin-bottom: 6em;
 	}
 }
